# OSL_Spring_TestBed

./: .gitignore  README.md  Stiffness_Cyclic_Torque_Deflection_FrequencyRamp_Pi5.py  Stiffness_Cyclic_Torque_Deflection_Pi5.py  Stiffness_Test.py  Stiffness_Test_Pi4B.py  Stiffness_Test_Pi5.py  deflec_calc.py  find_stiffness  pixi.toml  pyproject.toml  sea_calibration_plotter.py  sea_testbed_plotter.py  series_spring_calibration.py  series_spring_calibration_pi4B.py  series_spring_calibration_pi5.py  series_spring_test.py  test_calibration_plotter.py  test_testbed_plotter copy.py  test_testbed_plotter.py  torque_sensor_debug.py  torque_test.py  video_recording_raw.py
SpringTest/: series_spring_test.py
Vision/: plot_cal.py  video_reading.py  video_reading_test.py
cal_folder/: inv_blue_directional.npz  inv_red_directional.npz
control/: pid.py  pid_zach.py  pid_zach_v2.py
hardware/: AdcManager.py  encoder.py  encoder_correction.py  filtered_dephy.py  futek.py
math/: Basic_LPF.py  MathUtils.py  spring_model_fit.py
scripts/: fix_venv_prompt.sh  setup_uv_env.sh
